# lab

./: .gitignore  LICENSE
Asm/: main  main.asm
Asm/riscv/: asm.aux  asm.tex  asm.toc  main  main.asm  main.c  main.s
Coursera/: .gitignore
Coursera/Algorithm/: HelloGoodbye.java  HelloWorld.java  Percolation.java  PercolationStats.java  RandomWord.java
DataMining/ID3/: .gitignore  CMakeLists.txt  log  main.cpp
DataMining/apriori/: apriori.aux  apriori.toc  output.txt
EdgeDetect/: image.tiff  main.dvi  main.lex  边缘检测算法.ipynb
EdgeDetect/.auctex-auto/: main.el
IV-process/: data.aux  data.out  data.toc  image.tiff  视频大数据实验.docx
IV-process/大数据1901柴博文/: data.tex  视频大数据实验3.ipynb
Medical/: README.md  homework-1.ipynb
OpenCV/: CMakeLists.txt  edge.cpp  facedetect.cpp  peopledetect.cpp
Simulink/: simulink.tex  图像数据处理.ipynb
Spark/: feature.md  feature.temp.html
Sql/final/: main.sql
Sql/lab1/: check_config.sql  create_database.sql  create_table.sql  数据库实验报告.md
data-process/: DB-Scan.ipynb
data-process/apriori/: Cargo.toml  apriori.out  apriori.tex  output.txt  算法实现.out  算法实现.toc
data-process/lab2/: 算法实现.aux  算法实现.tex
fuck/: HELP.md
hadoop/server/: Cargo.toml
hadoop/server/src/: main.rs
linux/AVL/: avl.h  main.cc
linux/exam/: fork_wc.c  shm-server.c
linux/fork/: Cargo.toml
linux/memory_pool/: main.c
linux/message_queue/: message_queue.cpp  signaction_sync.cpp
linux/pipe/: main  main.cpp  test
linux/pthread/: thread_buffer.c  thread_mutex.c  thread_sum.c  thread_wc.cpp
useless-java/: build.gradle  settings.gradle
(+73 files in other folders)
