[package]
name = "server"
version = "0.1.0"
authors = ["lovebaihezi <x18739168862@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
actix-web = "3"
serde_json = "1"
actix-cors = "0.5.4"
actix-files = "0.5.0"